--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
                 margin-top: 20vh;
                 animation-delay: 2s;
                 text-align: center;
-                box-shadow: 0em 1em 1em #8ecae650; 
+                box-shadow: 0em 1em 1em #8ecae650;
             }
 
             .box-dim {
@@ -814,7 +814,7 @@
                 margin-top: 5vh;
                 float: center;
                 width: auto;
-                box-shadow: 0em 1em 1em #8ecae650; 
+                box-shadow: 0em 1em 1em #8ecae650;
             }
 
             .proj-cont {
@@ -838,7 +838,7 @@
                 width: auto;
                 margin-left: auto;
                 margin-right: auto;
-                box-shadow: 0em 1em 1em #8ecae650; 
+                box-shadow: 0em 1em 1em #8ecae650;
             }
 
             .contact-me-cont {
@@ -847,7 +847,7 @@
                 width: auto;
                 margin-left: auto;
                 margin-right: auto;
-                box-shadow: 0em 1em 1em #8ecae650; 
+                box-shadow: 0em 1em 1em #8ecae650;
             }
 
 
@@ -914,7 +914,8 @@
                 overflow-wrap: break-word;
                 word-wrap: break-word;
             }
-            textarea{
+
+            textarea {
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
@@ -927,8 +928,8 @@
                 padding-top: 2px;
                 overflow-wrap: break-word;
                 word-wrap: break-word;
-                height:auto; 
-                width: 50vw; 
+                height: auto;
+                width: 50vw;
             }
 
             button {
@@ -1097,7 +1098,7 @@
                 opacity: 0;
                 text-align: left;
                 margin-left: 5px;
-            } 
+            }
 
             .content {
                 position: absolute;
@@ -1912,7 +1913,7 @@
                 margin-top: 30vh;
                 animation-delay: 2s;
                 text-align: center;
-                box-shadow: 0em 1em 1em #8ecae650; 
+                box-shadow: 0em 1em 1em #8ecae650;
             }
 
             .box-dim {
@@ -1928,7 +1929,7 @@
                 margin-top: 5vh;
                 float: center;
                 width: auto;
-                box-shadow: 0 1em 1em #8ecae650; 
+                box-shadow: 0 1em 1em #8ecae650;
             }
 
             .proj-cont {
@@ -1952,7 +1953,7 @@
                 width: auto;
                 margin-left: auto;
                 margin-right: auto;
-                box-shadow: 0em 1em 1em #8ecae650; 
+                box-shadow: 0em 1em 1em #8ecae650;
             }
 
             .contact-me-cont {
@@ -1961,7 +1962,7 @@
                 width: auto;
                 margin-left: auto;
                 margin-right: auto;
-                box-shadow: 0em 1em 1em #8ecae650; 
+                box-shadow: 0em 1em 1em #8ecae650;
             }
 
             .contact-text {
@@ -2035,7 +2036,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            textarea{
+            textarea {
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
@@ -2048,8 +2049,8 @@
                 padding-top: 2.5px;
                 overflow-wrap: break-word;
                 word-wrap: break-word;
-                height:auto; 
-                width: 70vw; 
+                height: auto;
+                width: 70vw;
             }
 
             button {
@@ -2123,12 +2124,13 @@
 
             .container-about-me {
                 margin-top: 50vh;
-                display: inline-flex; 
+                display: inline-flex;
             }
-            .center-box{
+
+            .center-box {
                 justify-content: center;
                 align-items: center;
-                display: flex; 
+                display: flex;
                 align-self: center;
                 vertical-align: middle;
                 text-align: center;
@@ -2705,7 +2707,7 @@
             }
 
             .mySlides {
-                display: none; 
+                display: none;
             }
 
             .prev,
@@ -2943,7 +2945,7 @@
                 margin-top: 50vh;
                 text-align: left;
                 align-items: left;
-                box-shadow: 1em 1em 1em #8ecae650; 
+                box-shadow: 1em 1em 1em #8ecae650;
             }
 
             .box-dim {
@@ -2961,7 +2963,7 @@
                 width: 35vw;
                 text-align: right;
                 align-items: right;
-                box-shadow: 1em 1em 1em #8ecae650; 
+                box-shadow: 1em 1em 1em #8ecae650;
             }
 
             .proj-cont {
@@ -3068,7 +3070,7 @@
                 width: 60vw;
                 margin-left: auto;
                 margin-right: auto;
-                box-shadow: 1em 1em 1em #8ecae650; 
+                box-shadow: 1em 1em 1em #8ecae650;
             }
 
             /* add flip card effect for phones */
@@ -3099,7 +3101,8 @@
                 overflow-wrap: break-word;
                 word-wrap: break-word;
             }
-            textarea{
+
+            textarea {
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
@@ -3112,8 +3115,8 @@
                 padding-top: 3px;
                 overflow-wrap: break-word;
                 word-wrap: break-word;
-                height:auto; 
-                width: 80vw; 
+                height: auto;
+                width: 80vw;
             }
 
             button {
@@ -3440,6 +3443,48 @@
             }
 
         }
+
+        .dropdown-container {
+            position: fixed;
+            color: #FB8500;
+            align-items: center;
+            justify-content: center;
+            width: auto;
+            height: 3em;
+            border-radius: 5em;
+            background-color: transparent;
+            transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+            display: inline-flex;
+            opacity: 0;
+            display: none;
+            flex-direction: row;
+            border-top: none;
+            vertical-align: middle;
+            margin-left: 6em;
+            bottom: 5%;
+        }
+
+        .dropdown-container.show {
+            display: flex;
+            opacity: 1;
+        }
+
+        .dropdown-container i {
+            margin: 5px 0;
+        }
+
+        button:hover,
+        button:visited {
+            box-shadow: 0 0 3em #FFB703;
+        }
+
+        .fa-house:hover,
+        .fa-building-columns:hover,
+        .fa-wrench:hover,
+        .fa-award:hover,
+        .fa-message:hover {
+            color: #FFB703;
+        }
     </style>
 </head>
 
@@ -3463,32 +3508,46 @@
         </div>
     </div>
 
+    <div style="display: inline-flex;">
+        <button id="toggle-button"
+            style="margin-left: 3em; position: fixed; bottom: 5%; border: none; transition: background-color 0.3s; cursor: pointer; color: #FB8500; display: flex; align-items: center; justify-content: center; width: 3em; height: 3em; border-radius: 5em; background-color: #023047; filter: drop-shadow(0 0 1em #FFFFFF)">
+            <i class="fa-solid fa-grip-lines"></i>
+        </button>
+
+        <div id="dropdown-root"></div>
+    </div>
+
+
     <div class="container-about-me">
         <div class="center-box">
-        <div class=" fade-in1 left-oriented about-me">
-            <h2> <a href="#Home" class="link-orange left-text"> ABOUT ME </a> </h2>
-            <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
-                Science. I have partaken in multiple research projects at the university level, notably developing a
-                mental
-                chatbot, on top of engineering, such as developing the bionic knee with Texas Instruments technology and
-                Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
-                applications in different industries, such as cloud computing, intelligent devices, and data science.
-                <br> I
-                also am a big equity activist who pushes for equity and diversity in the technology sector and aspires
-                to
-                combine both my technological and activist background to develop real-world tecnological, equitable
-                solutions.
-                <br>
-                My area of focus lies within integrating artificial intelligence to create equitable solutions to solve
-                real-world problems in underresourced communities.
-            </p>
-        </div>
+            <div class=" fade-in1 left-oriented about-me">
+                <h2> <a href="#Home" class="link-orange left-text"> ABOUT ME </a> </h2>
+                <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
+                    Science. I have partaken in multiple research projects at the university level, notably developing a
+                    mental
+                    chatbot, on top of engineering, such as developing the bionic knee with Texas Instruments technology
+                    and
+                    Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
+                    applications in different industries, such as cloud computing, intelligent devices, and data
+                    science.
+                    <br> I
+                    also am a big equity activist who pushes for equity and diversity in the technology sector and
+                    aspires
+                    to
+                    combine both my technological and activist background to develop real-world tecnological, equitable
+                    solutions.
+                    <br>
+                    My area of focus lies within integrating artificial intelligence to create equitable solutions to
+                    solve
+                    real-world problems in underresourced communities.
+                </p>
+            </div>
         </div>
         <div class="center-box">
-        <div class="fade-in1 box box-dim" style = "vertical-align: middle; box-shadow: 0 0 3em #fb86008d;">
-            <img src="shriya_pfp.png">
-            <!--style="transition-delay: 2.5s;"-->
-        </div>
+            <div class="fade-in1 box box-dim" style="vertical-align: middle; box-shadow: 0 0 3em #fb86008d;">
+                <img src="shriya_pfp.png">
+                <!--style="transition-delay: 2.5s;"-->
+            </div>
         </div>
     </div>
 
@@ -3558,10 +3617,13 @@
             <div id="ForMich" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
-                        An interactive website for an organization aiming to increase voter turnout among college students...
+                        An interactive website for an organization aiming to increase voter turnout among college
+                        students...
                     </h2>
                     <br>
-                    <p class="project-desc"> The official website for the For Michigan non-profit organization, embedded with interactive features, such as color changing background on click, and personalized voting information pages for each college. Check it out at www.4mich.org.
+                    <p class="project-desc"> The official website for the For Michigan non-profit organization, embedded
+                        with interactive features, such as color changing background on click, and personalized voting
+                        information pages for each college. Check it out at www.4mich.org.
                     </p>
                     <br>
                     <a href="#Projects" class="box-close">
@@ -3615,11 +3677,17 @@
             <div id="DEI" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
-                        An equity initiative focused on providing more opportunities, such as internships and engineering kits, to underrepresented students aspiring to pursue STEM...
+                        An equity initiative focused on providing more opportunities, such as internships and
+                        engineering kits, to underrepresented students aspiring to pursue STEM...
                     </h2>
                     <br>
                     <div>
-                        <p class="project-title" class="project-desc"> Proposed and led an initivate to encourage the school district's underrepresented students to pursue their aspirations in STEMs. Presented to the Board of Education numerous times on plausible solutions to bring more opportunities for these students in a feasible and doable manner. Secured and worked with a grant to distribute calculators and engineering kits to underresourced schools within the district. </p>
+                        <p class="project-title" class="project-desc"> Proposed and led an initivate to encourage the
+                            school district's underrepresented students to pursue their aspirations in STEMs. Presented
+                            to the Board of Education numerous times on plausible solutions to bring more opportunities
+                            for these students in a feasible and doable manner. Secured and worked with a grant to
+                            distribute calculators and engineering kits to underresourced schools within the district.
+                        </p>
                     </div>
                     <br>
                     <a href="#Projects" class="box-close">
@@ -3707,7 +3775,8 @@
                     </h2>
                     <br>
                     <div>
-                        <p class="project-desc"> A program utilizing canny-based line detection with apperture to do edge tracing based on a picture. </p>
+                        <p class="project-desc"> A program utilizing canny-based line detection with apperture to do
+                            edge tracing based on a picture. </p>
                     </div>
                     <br>
                     <a href="#Projects" class="box-close">
@@ -3771,7 +3840,7 @@
                 </div>
             </div>
         </div>
-       
+
     </div>
 
 
@@ -3877,10 +3946,10 @@
         &nbsp; &nbsp;
         <a href="https://www.linkedin.com/in/shriya-biddala/"> <i class="fab fa-align-center fa-linkedin fa-bounce">
             </i> </a>
-        &nbsp; &nbsp; 
+        &nbsp; &nbsp;
         <a href="https://github.com/shriyabi"> <i class="fa-brands fa-github fa-bounce"></i> </a>
         &nbsp; &nbsp;
-        
+
         <a href="mailto:shriyarbiddala@gmail.com"> <i class="fa-solid fa-bounce fa-envelope"></i></a>
         <!--<i class="fa-solid fa-bounce fa-align-center fa-envelope"></i>-->
 
