--- a/index.html
+++ b/index.html
@@ -3551,7 +3551,7 @@
         </div>
     </div>
 
-    <div class="flex-container educimg">
+    <div class="flex-container educimg" id="Education">
         <div class=" fade-in2 box2" style="box-shadow: 0 0 3em #ffb8038f;">
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
