--- a/index.html
+++ b/index.html
@@ -3510,9 +3510,9 @@
 
     <div style="display: inline-flex;">
         <button id="toggle-button"
-            style="margin-left: 3em; position: fixed; bottom: 5%; border: none; transition: background-color 0.3s; cursor: pointer; color: #FB8500; display: flex; align-items: center; justify-content: center; width: 3em; height: 3em; border-radius: 5em; background-color: #023047; filter: drop-shadow(0 0 1em #FFB703)"
+            style="margin-left: 3em; position: fixed; bottom: 5%; border: none; transition: background-color 0.3s; cursor: pointer; color: #FB8500; display: flex; align-items: center; justify-content: center; width: 5em; height: 5em; border-radius: 5em; background-color: transparent; filter: drop-shadow(0 0 1em #FFB703)"
             onclick="dropDown()">
-            <i class="fa-solid fa-grip-lines"></i>
+            <i class="fa-solid fa-bars"></i>
         </button>
 
         <div id="dropdown-root"></div>
