--- a/index.html
+++ b/index.html
@@ -3546,7 +3546,7 @@
         </div>
         <div class="center-box">
             <div class="fade-in1 box box-dim" style="vertical-align: middle; box-shadow: 0 0 3em #fb86008d;">
-                <img src="shriya-transparent.png" style="background-color:#023047">
+                <img src="shriya-transparent.png" style="background-color:#011f2f; filter:drop-shadow(0 0 1em #FB8500)">
                 <!--style="transition-delay: 2.5s;"-->
             </div>
         </div>
