--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 /*need to fix image proportions across different devices*/
                 border: 1em solid #0000;
                 border-radius: 50%;
-                background: linear-gradient(#FB8500, #011f2f) padding-box, linear-gradient(var(--angle),
+                background: linear-gradient(#011f2f, #011f2f) padding-box, linear-gradient(var(--angle),
                         #FB8500,
                         #011f2f) border-box;
                 animation: rotate 5s linear infinite;
@@ -688,7 +688,7 @@
                 /* height: auto;*/
                 border: 1em solid #0000;
                 border-radius: 50%;
-                background: linear-gradient(#FB8500, #011f2f) padding-box, linear-gradient(var(--angle),
+                background: linear-gradient(#011f2f, #011f2f) padding-box, linear-gradient(var(--angle),
                         #FFB703,
                         #011f2f) border-box;
                 animation: rotate 5s linear infinite;
@@ -1562,7 +1562,7 @@
                 /*need to fix image proportions across different devices*/
                 border: 1em solid #0000;
                 border-radius: 50%;
-                background: linear-gradient(#FB8500, #011f2f) padding-box, linear-gradient(var(--angle),
+                background: linear-gradient(#011f2f, #011f2f) padding-box, linear-gradient(var(--angle),
                         #FB8500,
                         #011f2f) border-box;
                 animation: rotate 5s linear infinite;
@@ -1801,7 +1801,7 @@
                 /* height: auto;*/
                 border: 1em solid #0000;
                 border-radius: 50%;
-                background: linear-gradient(#FB8500, #011f2f) padding-box, linear-gradient(var(--angle),
+                background: linear-gradient(#011f2f, #011f2f) padding-box, linear-gradient(var(--angle),
                         #FFB703,
                         #011f2f) border-box;
                 animation: rotate 5s linear infinite;
@@ -2592,7 +2592,7 @@
                 /*need to fix image proportions across different devices*/
                 border: 1em solid #0000;
                 border-radius: 50%;
-                background: linear-gradient(#FB8500, #011f2f) padding-box, linear-gradient(var(--angle),
+                background: linear-gradient(#011f2f, #011f2f) padding-box, linear-gradient(var(--angle),
                         #FB8500,
                         #011f2f) border-box;
                 animation: rotate 5s linear infinite;
@@ -2831,7 +2831,7 @@
                 /* height: auto;*/
                 border: 1em solid #0000;
                 border-radius: 50%;
-                background: linear-gradient(#FB8500, #011f2f) padding-box, linear-gradient(var(--angle),
+                background: linear-gradient(#011f2f, #011f2f) padding-box, linear-gradient(var(--angle),
                         #FFB703,
                         #011f2f) border-box;
                 animation: rotate 5s linear infinite;
