--- a/index.html
+++ b/index.html
@@ -3554,7 +3554,7 @@
 
     <div class="flex-container educimg" id="Education">
         <div class=" fade-in2 box2" style="box-shadow: 0 0 3em #ffb8038f;">
-            <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
+            <img src="shriya-umich-transparent.png" style="filter:drop-shadow(0 0 1em #FFB703)">
         </div>
         <div class="fade-in2 right-oriented education">
             <h2> <a href="#Home" class="link-orange right_text"> EDUCATION </a> </h2>
