--- a/index.html
+++ b/index.html
@@ -1557,8 +1557,8 @@
                 justify-content: center;
                 align-items: center;
                 /* height: 25em;*/
-                height: 29em;
-                width: 29em;
+                height: 26em;
+                width: 26em;
                 /*need to fix image proportions across different devices*/
                 border: 1em solid #0000;
                 border-radius: 50%;
@@ -3545,7 +3545,7 @@
             </div>
         </div>
         <div class="center-box">
-            <div class="fade-in1 box box-dim" style="vertical-align: middle; box-shadow: 0 0 3em #fb86008d;">
+            <div class="fade-in1 box box-dim" style="vertical-align: middle;">
                 <img src="shriya-transparent.png" style="filter:drop-shadow(0 0 1em #FB8500)">
                 <!--style="transition-delay: 2.5s;"-->
             </div>
@@ -3553,7 +3553,7 @@
     </div>
 
     <div class="flex-container educimg" id="Education">
-        <div class=" fade-in2 box2" style="box-shadow: 0 0 3em #ffb8038f;">
+        <div class=" fade-in2 box2">
             <img src="shriya-umich-transparent.png" style="filter:drop-shadow(0 0 1em #FFB703)">
         </div>
         <div class="fade-in2 right-oriented education">
