--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 /*need to fix image proportions across different devices*/
                 border: 1em solid #0000;
                 border-radius: 50%;
-                background: linear-gradient(#011f2f, #011f2f) padding-box, linear-gradient(var(--angle),
+                background: linear-gradient(#fb860077, #011f2f) padding-box, linear-gradient(var(--angle),
                         #FB8500,
                         #011f2f) border-box;
                 animation: rotate 5s linear infinite;
@@ -682,8 +682,8 @@
                 /* display: flex;*/
                 justify-content: center;
                 align-items: center;
-                height: 14em;
-                width: 14em;
+                height: 15em;
+                width: 15em;
                 /*width: auto; */
                 /* height: auto;*/
                 border: 1em solid #0000;
@@ -1557,12 +1557,12 @@
                 justify-content: center;
                 align-items: center;
                 /* height: 25em;*/
-                height: 26em;
-                width: 26em;
+                height: 30em;
+                width: 30em;
                 /*need to fix image proportions across different devices*/
                 border: 1em solid #0000;
                 border-radius: 50%;
-                background: linear-gradient(#011f2f, #011f2f) padding-box, linear-gradient(var(--angle),
+                background: linear-gradient(#fb860077, #011f2f) padding-box, linear-gradient(var(--angle),
                         #FB8500,
                         #011f2f) border-box;
                 animation: rotate 5s linear infinite;
@@ -2592,7 +2592,7 @@
                 /*need to fix image proportions across different devices*/
                 border: 1em solid #0000;
                 border-radius: 50%;
-                background: linear-gradient(#011f2f, #011f2f) padding-box, linear-gradient(var(--angle),
+                background: linear-gradient(#fb860077, #011f2f) padding-box, linear-gradient(var(--angle),
                         #FB8500,
                         #011f2f) border-box;
                 animation: rotate 5s linear infinite;
@@ -2780,8 +2780,8 @@
             .box2__bg {
                 position: absolute;
                 z-index: 0;
-                height: 38em;
-                width: 38em;
+                height: 40em;
+                width: 40em;
                 border-radius: 0.625em;
                 overflow: hidden;
                 padding: 12px;
@@ -2825,8 +2825,8 @@
                 /* display: flex;*/
                 justify-content: center;
                 align-items: center;
-                height: 38em;
-                width: 38em;
+                height: 40em;
+                width: 40em;
                 /*width: auto; */
                 /* height: auto;*/
                 border: 1em solid #0000;
@@ -3545,7 +3545,7 @@
             </div>
         </div>
         <div class="center-box">
-            <div class="fade-in1 box box-dim" style="vertical-align: middle;">
+            <div class="fade-in1 box box-dim" style="vertical-align: middle; box-shadow: 0 0 3em #fb86008d;">
                 <img src="shriya-transparent.png" style="filter:drop-shadow(0 0 1em #FB8500)">
                 <!--style="transition-delay: 2.5s;"-->
             </div>
@@ -3553,8 +3553,8 @@
     </div>
 
     <div class="flex-container educimg" id="Education">
-        <div class=" fade-in2 box2">
-            <img src="shriya-umich-transparent.png" style="filter:drop-shadow(0 0 1em #FFB703)">
+        <div class=" fade-in2 box2" style="box-shadow: 0 0 3em #ffb8038f;">
+            <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
         <div class="fade-in2 right-oriented education">
             <h2> <a href="#Home" class="link-orange right_text"> EDUCATION </a> </h2>
