--- a/index.html
+++ b/index.html
@@ -3612,7 +3612,7 @@
             </div>
 
             <p class="project-text" style="color: #FB8500; text-align: left;"> SKILLS:</p>
-            <p class="skill-text" style="text-align: left;"> HTML/CSS/JS, Web-Development </p>
+            <p class="skill-text" style="text-align: left;"> HTML/CSS/JS, Web-Development, React.js, TailwindCSS, Node.js, Express.js, MySQL </p>
 
             <div class="learn-more"><a href="#ForMich" class="link-orange"> Click for More Information </a></div>
             <div id="ForMich" class="modal">
@@ -3624,7 +3624,7 @@
                     <br>
                     <p class="project-desc"> The official website for the For Michigan non-profit organization, embedded
                         with interactive features, such as color changing background on click, and personalized voting
-                        information pages for each college. Check it out at www.4mich.org.
+                        information pages for each college. Includes a 300-person staff directory using MySQL. Check it out at www.4mich.org.
                     </p>
                     <br>
                     <a href="#Projects" class="box-close">
@@ -3668,26 +3668,22 @@
     <br>
     <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;"> Equity Initiative: STEM+ for Underrepresented Students </h3>
+            <h3 style="color: #dcf4fc; margin: auto;"> DocuDog </h3>
             <p class="project-text" style="color: #FB8500; text-align: left;">
                 SKILLS:
             </p>
-            <p class=" skill-text" style="text-align: left;"> Leadership, Presentation </p>
+            <p class=" skill-text" style="text-align: left;"> Python, Gemini 1.5 Pro API </p>
 
             <div class="learn-more"><a href="#DEI" class="link-orange"> Click for More Information </a></div>
             <div id="DEI" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
-                        An equity initiative focused on providing more opportunities, such as internships and
-                        engineering kits, to underrepresented students aspiring to pursue STEM...
+                        A one-stop-shop for people to get summaries of particular features of important documents...
                     </h2>
                     <br>
                     <div>
-                        <p class="project-title" class="project-desc"> Proposed and led an initivate to encourage the
-                            school district's underrepresented students to pursue their aspirations in STEMs. Presented
-                            to the Board of Education numerous times on plausible solutions to bring more opportunities
-                            for these students in a feasible and doable manner. Secured and worked with a grant to
-                            distribute calculators and engineering kits to underresourced schools within the district.
+                        <p class="project-title" class="project-desc"> 
+                            Utilized Python to customize queries for Gemini 1.5 Pro, allowing users to extract specific details from various documents and ask questions based on those details, such as obtaining quantitative data from business reports or helping one understand a function thoroughly from an API. Also designed a query routing system that parses user queries and generates tailored sub-queries for the large language model, improving information retrieval efficiency.
                         </p>
                     </div>
                     <br>
