--- a/index.html
+++ b/index.html
@@ -3669,7 +3669,7 @@
     <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> DocuDog </h3>
-            <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/watch?v=Qq7_72aoV08"
+            <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/embed/Qq7_72aoV08"
                 style="margin: auto; margin-top: 2vh;"> </iframe>
             <p class="project-text" style="color: #FB8500; text-align: left;">
                 SKILLS:
