added new experience

--- a/index.html
+++ b/index.html
@@ -3703,7 +3703,7 @@
             </div>
 
             <p class="project-text" style="color: #FB8500; text-align: left;"> SKILLS:</p>
-            <p class="skill-text" style="text-align: left;"> OpenCV, PyTorch, HTML/CSS/JS </p>
+            <p class="skill-text" style="text-align: left;"> OpenCV, PyTorch, HTML/CSS/JS, Express.js </p>
 
             <div class="learn-more"><a href="#Handwriting" class="link-orange"> Click for More Information </a></div>
             <div id="Handwriting" class="modal">
@@ -3813,24 +3813,23 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;">PenguJump</h3> <!--replace with gemini project-->
-
+            <h3 style="color: #dcf4fc; margin: auto;">For Michigan Staff Directory</h3> <!--replace with gemini project-->
+            <div class="fade-in2 box3 ">
+                <img src="StaffDirectory.png">
+            </div>
             <p class="project-text" style="color: #FB8500; text-align: left;">
                 SKILLS: </p>
-            <p class="skill-text" style="text-align: left;"> GreenFootAPI, Java, Object-Oriented
-                Programming </p>
+            <p class="skill-text" style="text-align: left;"> ReactJS, TailwindCSS, Express.js, Node.js, MySQL </p>
 
             <div class="learn-more"><a href="#Game" class="link-orange"> Click for More Information </a></div>
             <div id="Game" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
-                        An object-oriented-programming-based user engaging video game...
+                        An visually-appleasing and interactive staff-directory...
                     </h2>
                     <br>
                     <div>
-                        <p class="project-desc"> An interactive game developed with GreenFoot API and
-                            Java utilizing
-                            object-oriented programming and inheritance. </p>
+                        <p class="project-desc"> A 300 person staff directory with a visually appealing user interface which queries data based on certain requests and is secured with Google OAuth Login.</p>
                     </div>
                     <br>
                     <a href="#Projects" class="box-close">
